--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+h1 {
+text-align: center;
+color: blue;
+}
+
+.Inputs {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-left: 400px;
+  
+}
+
+.reset {
+  text-align: center;
+  display: flex;
+  margin-left: 600px;
+  margin-top: 70px;
+  height: 50px;
+  width: 100px;
+  background-color: #008CBA;
   color: white;
+  font-size: large;
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.play {
+  text-align: center;
+  display: flex;
+  margin-left: 600px;
+  margin-top: 20px;
+  background-color: #4CAF50; 
+  height: 50px;
+  width: 100px;
+  text-size-adjust: 30px;
+  color: white;
+  font-size: large;
+  display: inline-block;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stop {
+  text-align: center;
+  display: flex;
+  font-size: large;
+  margin-left: 600px;
+  margin-top: 20px;
+  height: 50px;
+  color: white;
+  width: 100px;
+  background-color: #f44336;
+  display: inline-block;
 }
